--- a/src/jquery.grid-composer.css
+++ b/src/jquery.grid-composer.css
@@ -17,6 +17,16 @@
 
 .gc-components .gc-component-item {
 	float: left;
+	position: relative;
+}
+
+.gc-components .gc-component-item[class*="gc-resize"] {
+	overflow: hidden;
+}
+
+.gc-components .gc-component-item img {
+	display: block;
+	position: absolute;
 }
 
 .gc-grid {
@@ -35,4 +45,62 @@
 	box-sizing: border-box;
 	border: 1px dashed #C0C0C0;
 	float: left;
+}
+
+.gc-grid .gc-grid-item {
+	position: absolute;
+}
+
+.gc-grid .gc-grid-item img {
+	display: block;
+	position: absolute;
+}
+
+.gc-grid .gc-grid-item span {
+	display: inline-block;
+	position: relative;
+	text-align: center;
+	vertical-align: middle;
+	width: 100%;
+}
+
+.gc-grid .gc-grid-item:after {
+	content: '';
+	height: 100%;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.gc-grid .gc-grid-item[class*="gc-resize"] {
+	overflow: hidden;
+}
+
+.gc-grid .gc-grid-item .ui-resizable-w,
+.gc-grid .gc-grid-item .ui-resizable-nw,
+.gc-grid .gc-grid-item .ui-resizable-sw {
+	left: 0;
+}
+
+.gc-grid .gc-grid-item .ui-resizable-e,
+.gc-grid .gc-grid-item .ui-resizable-ne,
+.gc-grid .gc-grid-item .ui-resizable-se {
+	right: 0;
+}
+
+.gc-grid .gc-grid-item .ui-resizable-w,
+.gc-grid .gc-grid-item .ui-resizable-e,
+.gc-grid .gc-grid-item .ui-resizable-ne,
+.gc-grid .gc-grid-item .ui-resizable-nw,
+.gc-grid .gc-grid-item .ui-resizable-se,
+.gc-grid .gc-grid-item .ui-resizable-sw  {
+	width: 20px;
+}
+
+.gc-grid .gc-grid-item .ui-resizable-n,
+.gc-grid .gc-grid-item .ui-resizable-s,
+.gc-grid .gc-grid-item .ui-resizable-ne,
+.gc-grid .gc-grid-item .ui-resizable-nw,
+.gc-grid .gc-grid-item .ui-resizable-se,
+.gc-grid .gc-grid-item .ui-resizable-sw {
+	height: 20px;
 }
