--- a/src/jquery.grid-composer.css
+++ b/src/jquery.grid-composer.css
@@ -63,6 +63,7 @@
 
 .gc-grid .gc-grid-item span {
 	display: inline-block;
+	padding: 0 4px;
 	position: relative;
 	text-align: center;
 	vertical-align: middle;
