bugfix zIndex for overlay elements

--- a/src/jquery.grid-composer.css
+++ b/src/jquery.grid-composer.css
@@ -55,6 +55,11 @@
 
 .gc-grid .gc-grid-item {
 	position: absolute;
+	z-index: 2;
+}
+
+.gc-grid .gc-grid-item.gc-can-overlay {
+	z-index: 1;
 }
 
 .gc-grid .gc-grid-item img {
