--- a/src/jquery.grid-composer.css
+++ b/src/jquery.grid-composer.css
@@ -53,6 +53,29 @@
 	float: left;
 }
 
+.gc-grid .gc-trash {
+	-webkit-transition: all .2s linear;
+	-moz-transition: all .2s linear;
+	-ms-transition: all .2s linear;
+	-o-transition: all .2s linear;
+	transition: all .2s linear;
+	-webkit-box-shadow: 0 0px 20px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow: 0 0px 20px rgba(0, 0, 0, 0.2);
+	-ms-box-shadow: 0 0px 20px rgba(0, 0, 0, 0.2);
+	-o-box-shadow: 0 0px 20px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 0px 20px rgba(0, 0, 0, 0.2);
+	background: rgba(255, 255, 255, 0.8) url(gc-trash.png) no-repeat center center;
+	height: 100%;
+	position: absolute;
+	right: -100px;
+	top: 0;
+	width: 80px;
+}
+
+.gc-grid .gc-trash.open {
+	right: 0;
+}
+
 .gc-grid .gc-grid-item {
 	position: absolute;
 	z-index: 2;
